# py-nexgenomics

./: .gitignore  dodocs.sh  pyproject.toml
docs/: conf.py  index.rst
docs/source/: modules.rst  nexgenomics.rst
src/nexgenomics/: __init__.py  _internals.py  agents.py  images.py  threads.py
tests/: test_threads.py
